[gd_scene load_steps=47 format=2]

[ext_resource path="res://Sprites/Characters/Player_human.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Characters/Player_demon.png" type="Texture" id=3]
[ext_resource path="res://Resources/Tilesets/Tileset_Main.tres" type="TileSet" id=4]
[ext_resource path="res://Sprites/Effects/Sword6.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Effects/Sword5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Effects/Sword4.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Effects/Sword2.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Effects/Sword1.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Effects/Sword3.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Characters/Player_demon_run1a.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Characters/Player_demon_run3.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Characters/Player_demon_run2.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Characters/Player_demon_run1.png" type="Texture" id=14]
[ext_resource path="res://Audio/Ouch.ogg" type="AudioStream" id=17]
[ext_resource path="res://Sprites/Characters/Player_human_ouch.png" type="Texture" id=23]
[ext_resource path="res://Sprites/UI/Healthbar_empty.png" type="Texture" id=24]
[ext_resource path="res://Sprites/UI/Healthbar_full.png" type="Texture" id=25]
[ext_resource path="res://Audio/Shield.ogg" type="AudioStream" id=28]
[ext_resource path="res://Sprites/Characters/Shield.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Characters/Player_human_shield.png" type="Texture" id=30]
[ext_resource path="res://Sprites/UI/Clock_red.png" type="Texture" id=31]
[ext_resource path="res://Scripts/Controller.gd" type="Script" id=32]
[ext_resource path="res://Sprites/UI/Clock_blue.png" type="Texture" id=33]
[ext_resource path="res://Audio/Tick.ogg" type="AudioStream" id=34]
[ext_resource path="res://Audio/Bell.ogg" type="AudioStream" id=35]
[ext_resource path="res://Audio/Transform1.ogg" type="AudioStream" id=36]
[ext_resource path="res://Audio/Transform2.ogg" type="AudioStream" id=37]
[ext_resource path="res://Sprites/Characters/Protag_transform_5.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Characters/Protag_transform_1.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Characters/Protag_transform_2.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Characters/Protag_transform_3.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Characters/Protag_transform_4.png" type="Texture" id=42]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle_demon",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "start_demon",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "run_demon",
"speed": 10.0
}, {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 38 ) ],
"loop": false,
"name": "human_to_demon",
"speed": 7.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "run_human",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "shield_human",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "ouch_human",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "idle_human",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 3 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [  ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": false,
"name": "swing",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 13 )

[sub_resource type="Animation" id=5]
resource_name = "Spin"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false, true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Transform Human to Demon"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2.4, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Sprite")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3, 2.4 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "human_to_demon", false ],
"method": "play"
}, {
"args": [ "start_demon", false ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PartsTransform2:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finish_transformation"
} ]
}

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0, 0.506667, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0, 0 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 2
emission_box_extents = Vector3( 15, 15, 15 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = -120.0
scale = 2.0
color_ramp = SubResource( 10 )

[sub_resource type="ParticlesMaterial" id=12]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 32.0
initial_velocity_random = 0.55
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
color_ramp = SubResource( 10 )

[sub_resource type="NavigationPolygon" id=13]
vertices = PoolVector2Array( 296, 24, 296, 168, 24, 168, 24, 24 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 24, 24, 24, 168, 296, 168, 296, 24 ) ]

[node name="Test" type="Node2D"]

[node name="TileMap" type="TileMap" parent="."]
z_index = -1000
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
collision_layer = 512
collision_mask = 2147484160
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 16, 0, 0, 17, 0, 0, 18, 0, 0, 19, 0, 0, 65536, 0, 0, 65537, 1, 0, 65538, 1, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 65548, 1, 0, 65549, 1, 0, 65550, 1, 0, 65551, 1, 0, 65552, 1, 0, 65553, 1, 0, 65554, 1, 0, 65555, 0, 0, 131072, 0, 0, 131073, 1, 0, 131074, 1, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 1, 0, 131080, 1, 0, 131081, 1, 0, 131082, 1, 0, 131083, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131091, 0, 0, 196608, 0, 0, 196609, 1, 0, 196610, 1, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 1, 0, 196616, 1, 0, 196617, 1, 0, 196618, 1, 0, 196619, 1, 0, 196620, 1, 0, 196621, 1, 0, 196622, 1, 0, 196623, 1, 0, 196624, 1, 0, 196625, 1, 0, 196626, 1, 0, 196627, 0, 0, 262144, 0, 0, 262145, 1, 0, 262146, 1, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 262152, 1, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262163, 0, 0, 327680, 0, 0, 327681, 1, 0, 327682, 1, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 1, 0, 327688, 1, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327699, 0, 0, 393216, 0, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393235, 0, 0, 458752, 0, 0, 458753, 1, 0, 458754, 1, 0, 458755, 1, 0, 458756, 1, 0, 458757, 1, 0, 458758, 1, 0, 458759, 1, 0, 458760, 1, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458771, 0, 0, 524288, 0, 0, 524289, 1, 0, 524290, 1, 0, 524291, 1, 0, 524292, 1, 0, 524293, 1, 0, 524294, 1, 0, 524295, 1, 0, 524296, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 0, 0, 589824, 0, 0, 589825, 1, 0, 589826, 1, 0, 589827, 1, 0, 589828, 1, 0, 589829, 1, 0, 589830, 1, 0, 589831, 1, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 0, 0, 655360, 0, 0, 655361, 1, 0, 655362, 1, 0, 655363, 1, 0, 655364, 1, 0, 655365, 1, 0, 655366, 1, 0, 655367, 1, 0, 655368, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655379, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 152, 88 )
collision_layer = 513
collision_mask = 513
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="AnimatedSprite" parent="Player"]
frames = SubResource( 1 )
animation = "idle_human"

[node name="CollisionHuman" type="CollisionShape2D" parent="Player"]
position = Vector2( 1, 12 )
shape = SubResource( 2 )

[node name="SpriteSword" type="AnimatedSprite" parent="Player"]
position = Vector2( 18, 0 )
frames = SubResource( 3 )
animation = "idle"
playing = true

[node name="AreaSword" type="Area2D" parent="Player"]
collision_layer = 32
collision_mask = 32

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player/AreaSword"]
polygon = PoolVector2Array( 23.3711, -8.20177, 27.1617, -0.100296, 25.0806, 11.9404, 19.1345, 14.1702, 5.97891, 7.85252, 6.2019, -7.90446, 14.452, -14.2221 )
disabled = true

[node name="Hurtbox" type="Area2D" parent="Player"]
collision_layer = 32768
collision_mask = 32768

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Hurtbox"]
position = Vector2( 1, 2 )
shape = SubResource( 4 )

[node name="Shield" type="Sprite" parent="Player"]
visible = false
position = Vector2( 1, 2 )
texture = ExtResource( 29 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/Shield"]
anims/Spin = SubResource( 5 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Player/Shield"]
anims/Fadeout = SubResource( 6 )

[node name="Timer" type="Timer" parent="Player/Shield"]
wait_time = 0.48
one_shot = true

[node name="TimerCooldownShield" type="Timer" parent="Player"]
wait_time = 8.0
one_shot = true

[node name="TimerStun" type="Timer" parent="Player"]
wait_time = 0.4
one_shot = true

[node name="SoundShield" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 28 )
volume_db = -24.0
pitch_scale = 1.8

[node name="SoundHurt" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 17 )
volume_db = -12.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
playback_speed = 2.0
anims/Iframes = SubResource( 7 )

[node name="AnimationPlayerTransform" type="AnimationPlayer" parent="Player"]
"anims/Transform Human to Demon" = SubResource( 8 )

[node name="Healthbar" type="TextureProgress" parent="Player"]
visible = false
margin_left = -9.0
margin_top = -19.0
margin_right = 12.0
margin_bottom = -14.0
max_value = 5.0
value = 5.0
texture_under = ExtResource( 24 )
texture_progress = ExtResource( 25 )
tint_progress = Color( 0, 0.776471, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PartsTransform" type="Particles2D" parent="Player"]
emitting = false
amount = 16
process_material = SubResource( 11 )

[node name="PartsTransform2" type="Particles2D" parent="Player"]
position = Vector2( 2, 8 )
emitting = false
amount = 32
one_shot = true
explosiveness = 1.0
process_material = SubResource( 12 )

[node name="Navigation2D" type="Navigation2D" parent="."]
visible = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="Controller" type="Node" parent="."]
script = ExtResource( 32 )
meter_texture_1 = ExtResource( 31 )
meter_texture_2 = ExtResource( 33 )

[node name="UI" type="Control" parent="Controller"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClockBack" type="TextureRect" parent="Controller/UI"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 275.0
margin_top = 10.0
margin_right = 306.0
margin_bottom = 41.0
rect_scale = Vector2( 1.15, 1.15 )
texture = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clock" type="TextureProgress" parent="Controller/UI"]
margin_left = 277.0
margin_top = 12.0
margin_right = 308.0
margin_bottom = 43.0
max_value = 20.0
value = 20.0
rounded = true
texture_progress = ExtResource( 31 )
fill_mode = 4
radial_center_offset = Vector2( 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundTick" type="AudioStreamPlayer" parent="Controller"]
stream = ExtResource( 34 )
volume_db = -12.0

[node name="SoundBell" type="AudioStreamPlayer" parent="Controller"]
stream = ExtResource( 35 )
bus = "Reverb"

[node name="SoundTransform" type="AudioStreamPlayer" parent="Controller"]
stream = ExtResource( 36 )
volume_db = -20.0

[node name="SoundTransform2" type="AudioStreamPlayer" parent="Controller"]
stream = ExtResource( 37 )
volume_db = -18.0

[node name="TimerTransform" type="Timer" parent="Controller"]
wait_time = 20.0
one_shot = true
autostart = true
[connection signal="animation_finished" from="Player/SpriteSword" to="Player/SpriteSword" method="play" binds= [ "idle" ]]
[connection signal="animation_finished" from="Player/SpriteSword" to="Player/AreaSword/CollisionPolygon2D" method="set_disabled" binds= [ true ]]
[connection signal="area_entered" from="Player/Hurtbox" to="Player" method="_on_Hurtbox_body_entered"]
[connection signal="body_entered" from="Player/Hurtbox" to="Player" method="_on_Hurtbox_body_entered"]
[connection signal="animation_finished" from="Player/Shield/AnimationPlayer2" to="Player" method="_on_AnimationPlayer2_animation_finished"]
[connection signal="timeout" from="Player/Shield/Timer" to="Player/Shield/AnimationPlayer2" method="play" binds= [ "Fadeout" ]]
[connection signal="timeout" from="Player/Shield/Timer" to="Player" method="shield_end"]
[connection signal="timeout" from="Player/TimerCooldownShield" to="Player" method="_on_TimerCooldownShield_timeout"]
[connection signal="timeout" from="Player/TimerStun" to="Player" method="_on_TimerStun_timeout"]
[connection signal="animation_finished" from="Player/AnimationPlayer" to="Player" method="_on_AnimationPlayer_animation_finished"]
[connection signal="value_changed" from="Controller/UI/Clock" to="Controller" method="_on_Clock_value_changed"]
[connection signal="timeout" from="Controller/TimerTransform" to="Controller" method="_on_TimerTransform_timeout"]
